--- a/front/pages/chat/chat.wxml
+++ b/front/pages/chat/chat.wxml
@@ -1,15 +1,16 @@
-<view class="navbar">Chatting with AI</view>
+<view class="navbar">Chatting with OpenAI</view>
 <view class="page-content">
     <view class="chat-container">
         <view class="chat-content">
-            <view wx:for="{{messages}}" class="chat-message {{item.self ? 'self' : '' }}">
-                <view class="chat-bullet">{{item.text}}</view>
+            <view wx:for="{{messages}}" class="chat-message {{item.self ? 'self' : '' }}" wx:key="id" id="cm-{{item.id}}">
+<!--                <view class="chat-bullet">{{item.text}}</view>-->
+                <rich-text class="chat-bullet" space="nbsp" nodes="{{item.text}}" user-select></rich-text>
             </view>
         </view>
     </view>
 </view>
 
 <view class="chat-panel">
-    <input type="text" bindinput="handleInput" value="{{inputText}}" />
-    <view class="btn btn-send" bindtap="bindSend">Send</view>
+    <input type="text" bindinput="handleInput" value="{{inputText}}" bindconfirm="bindSend" />
+    <view class="btn btn-send" bindtap="bindSend">发送</view>
 </view>
