--- a/front/pages/chat/chat.wxss
+++ b/front/pages/chat/chat.wxss
@@ -2,32 +2,13 @@ page {
     display: flex;
     flex-direction: column;
     height: 100vh;
-}
-
-page .navbar {
-    height: 80rpx;
-    display: flex;
-    align-items: center;
-    padding-top: 30rpx;
-    padding-left: 20rpx;
-}
-
-.page-content {
-    flex: 1;
-    height: 0;
-    overflow-y: scroll;
-    background-color: #fff;
-}
-
-.chat-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    overflow: hidden;
 }
 
 .chat-content {
-    background-color: #f6f6f6;
     flex: 1;
+    height: 0;
+    background-color: #f6f6f6;
 }
 
 .chat-message {
