--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,42 +1,48 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+}
+
+.tips {
+  padding: .3rem;
+  background-color: #c6edff;
+  color: #4282f3;
+  font-size: 12px;
+}
+
+.head {
+  margin-top: 12px;
+  margin-left: 12px;
+}
+
+.head-text {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.shortcut-btn-group {
+  display: flex;
+  margin-top: 10px;
+}
+
+.btn {
+  background-color: #9a9a9a;
+  padding: 10px 2px;
+  margin: 10px;
+  flex: 1;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.tips-wrapper {
+  margin-top: 14px;
+  text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tips-wrapper .feedback-btn {
+  color: #a6a6a6;
+  text-decoration: underline;
+  font-size: 14px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.tips-wrapper .model-desc {
+  margin-top: 4px;
+  color: #a6a6a6;
+  font-size: 14px;
 }
