--- a/web/src/index.css
+++ b/web/src/index.css
@@ -32,6 +32,19 @@ h1 {
   line-height: 1.1;
 }
 
+input[type="submit"],
+input[type="text"],
+input[type="button"],
+input[type="number"],
+select,
+button {
+  -webkit-appearance: none;
+}
+
+input:focus-visible {
+  outline: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
