--- a/web/src/views/chat/index.css
+++ b/web/src/views/chat/index.css
@@ -1,3 +1,12 @@
+@media (prefers-color-scheme: light) {
+    .msg-bubble {
+        /*background-color: #ffffff!important;*/
+        /*color: #ebebeb!important;*/
+    }
+    .user-panel .msg-send-btn {
+        background-color: #4282f3;
+    }
+}
 .page-container {
     height: 100vh;
     display: flex;
@@ -6,6 +15,7 @@
 .msg-wrp {
     flex: 1;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .user-panel {
@@ -26,7 +36,8 @@ button, button:active {
 
 .user-panel .msg-send-btn {
     padding: 4px 12px;
-    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .msg-send-btn img {
