--- a/web/src/index.css
+++ b/web/src/index.css
@@ -33,9 +33,9 @@ h1 {
 }
 
 input {
-  border: 1px solid #d0d0d0;
+  border: 1px solid #bdbdbd;
   outline: none;
-  border-inline: none;
+  margin: 5px;
 }
 
 input[type="submit"],
